[package]
name = "bili-dynamic-notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
jiff = "0.1.14"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133" 
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
