[package]
name = "bili-dynamic-spider"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.29"
anyhow = "1.0.93"
base64 = "0.22.1"
futures = "0.3.31"
image = "0.25.5"
imageproc = "0.25.0"
jiff = "0.1.14"
lazy_static = "1.5.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133" 
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
unicode-segmentation = "1.12.0"
